--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -406,7 +406,7 @@
                 const result = await response.json();
                 
                 if (!result.authenticated) {
-                    window.location.href = 'index.html';
+                    window.location.href = 'index.php';
                     return;
                 }
                 
@@ -418,7 +418,7 @@
                 document.getElementById('adminName').textContent = result.user.name || result.user.username;
             } catch (error) {
                 console.error('Auth check failed:', error);
-                window.location.href = 'index.html';
+                window.location.href = 'index.php';
             }
         }
 
@@ -717,10 +717,10 @@
                 const response = await fetch('api/logout.php', { method: 'POST' });
                 const result = await response.json();
                 if (result.success) {
-                    window.location.href = 'index.html';
+                    window.location.href = 'index.php';
                 }
             } catch (error) {
-                window.location.href = 'index.html';
+                window.location.href = 'index.php';
             }
         }
 
